# nanoclaw

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
container/: Dockerfile
container/agent-runner/: ipc_mcp_stdio.py  main.py  requirements.txt
docs/: LANGUAGE_CONVERSION_FEASIBILITY.md  PYTHON_TELEGRAM_REWRITE_PLAN.md
src/nanoclaw/: __init__.py  __main__.py  config.py  container_runner.py  db.py  group_queue.py  ipc.py  logger.py  mount_security.py  router.py  task_scheduler.py  telegram_setup.py  types.py
src/nanoclaw/channels/: __init__.py  telegram.py
tests/: conftest.py  test_container_runner.py  test_db.py  test_formatting.py  test_group_queue.py  test_ipc_auth.py
