[project]
name = "nanoclaw"
version = "1.0.0"
description = "Personal Claude assistant. Lightweight, secure, customizable."
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "aiosqlite>=0.20.0",
    "claude-code-sdk>=0.0.10",
    "mcp>=1.0.0",
    "croniter>=2.0.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[project.scripts]
nanoclaw = "nanoclaw.__main__:main_entry"
nanoclaw-setup = "nanoclaw.telegram_setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanoclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
